force-app/main/default/objects/MessagingSession/fields/OM_ResultAlert__c.field-meta.xml
<CustomField>
    <fullName>OM_ResultAlert__c</fullName>
    <formula>ISPICKVAL(Resolucion__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Resultado</label>
    <type>Checkbox</type>
</CustomField>