force-app/main/default/objects/MessagingSession/fields/Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activación/reactivación portal del cliente</fullName>
            </value>
            <value>
                <fullName>Anulación cita contratación</fullName>
            </value>
            <value>
                <fullName>Cambio cita contratación</fullName>
            </value>
            <value>
                <fullName>Cambio o anulación cita informativa/completado</fullName>
            </value>
            <value>
                <fullName>Cita informativa/completado</fullName>
            </value>
            <value>
                <fullName>Cliente contesta a mensaje de cierre</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Atención al cliente</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Comercial</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Ejecuciones</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Gestión de cobros</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Procesal</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Recobro</fullName>
            </value>
            <value>
                <fullName>Cliente derivo a Resoluciones</fullName>
            </value>
            <value>
                <fullName>Cliente Información general</fullName>
            </value>
            <value>
                <fullName>Cliente ya ha hablado con Arriaga</fullName>
            </value>
            <value>
                <fullName>Derivo a asesor</fullName>
            </value>
            <value>
                <fullName>Equivocación</fullName>
            </value>
            <value>
                <fullName>Falta del respuesta del cliente</fullName>
            </value>
            <value>
                <fullName>Generamos cita</fullName>
            </value>
            <value>
                <fullName>Indeciso</fullName>
            </value>
            <value>
                <fullName>Información inicial</fullName>
            </value>
            <value>
                <fullName>No hay agenda disponible</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>No puede conseguir la docum.</fullName>
            </value>
            <value>
                <fullName>No tiene toda la documentación</fullName>
            </value>
            <value>
                <fullName>Producto no contratable</fullName>
            </value>
            <value>
                <fullName>Queja ATC</fullName>
            </value>
            <value>
                <fullName>Se deriva a conversación telefónica</fullName>
            </value>
            <value>
                <fullName>Tiempo expirado 24 h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>