force-app/main/default/objects/MessagingSession/listViews/OM_SMS_Queue_MessagingSession.listView-meta.xml
<ListView>
    <fullName>OM_SMS_Queue_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola de mensajería</label>
    <queue>OM_SMS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>