force-app/main/default/objects/MessagingSession/listViews/WhatsApp_MessagingSession.listView-meta.xml
<ListView>
    <fullName>WhatsApp_MessagingSession</fullName>
    <columns>Name</columns>
    <columns>MessagingChannel</columns>
    <columns>MessagingEndUser</columns>
    <columns>Owner</columns>
    <columns>PlatformType</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChannelType</field>
        <operation>equals</operation>
        <value>9</value>
    </filters>
    <label>WhatsApp</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>